2007-11-10  Takeshi Abe  <tabe@fixedpoint.jp>

	* mm_avcodec.h, mm_avformat.h, mm_ffmpeg.h: include gauche.h
	before other headers possibly concerned with Linux's
	Large File Support.

2007-05-10  Takeshi Abe  <tabe@fixedpoint.jp>

	* test/test.scm (check-file): rewritten with match macro.

2007-05-09  Takeshi Abe  <tabe@fixedpoint.jp>

	* INSTALL: Debian-specific instructions added.

2007-05-08  Takeshi Abe  <tabe@fixedpoint.jp>

	* release 0.1.1.

	* mm_avcodec.h, mm_avcodec.c, mm_ffmpeg.c: introduced 
	mm_avcodec_open and mm_avcodec_close, which are reentrant 
	cousins of avcodec_open and avcodec_close respectively 
	(inspired by gstreamer-ffmpeg).

2007-02-18  Takeshi Abe  <tabe@fixedpoint.jp>

	* Makefile.in (GENERATED): added files generated by "gauche-package 
	compile"

2006-12-20  Takeshi Abe  <tabe@fixedpoint.jp>

	* doc/reference.scm, test/test.scm: added entries for
	avformat-version and avcodec-version.

	* mm_avformatlib.stub, multimedia/avformat.scm: added
	avformat-version.

	* mm_avcodeclib.stub, multimedia/avcodec.scm: added
	avcodec-version.

2006-12-11  Takeshi Abe  <tabe@fixedpoint.jp>

	* doc/reference.scm: mentioned that the following procedures return #f
	on failure.

	* mm_avcodeclib.stub (avcodec-context-codec-name): returns the value
	of type 'maybe'.

	* mm_avformatlib.stub (avformat-open-input-avformat,
	avformat-context-filename): ditto.

	* mm_ffmpeglib.stub (ffmpeg-open-input-vcodec, ffmpeg-open-input-acodec,
	ffmpeg-open-input-avcodec): ditto.

2006-12-07  Takeshi Abe  <tabe@fixedpoint.jp>

	* release 0.1.0.
